# AbbeyRoad

./: AbbeyRoad.cabal  README.md  Setup.hs  abbey-road.cabal  stack.yaml
dependencies/freetype-2.5.5-vc11-64/freetype-2.5.5-vc11-64/lib/: freetype.lib
lib/AbbeyRoad/: Capture.hs  Play.hs
