name:                abbey-road
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/SwiftsNamesake/AbbeyRoad#readme
license:             MIT
-- TODO: Create this file
license-file:        LICENSE.md
author:              Jonatan Sundqvist
maintainer:          jonatanhsundqvist@gmail.com
copyright:           (c) Jonatan Sundqvist, 2015
category:            <category>
build-type:          Simple
cabal-version:       >=1.10

-- custom-setup
--   setup-depends:   base
--                  , filepath
--                  , directory
--                  , Cabal

library
  hs-source-dirs:      lib

  exposed-modules:     AbbeyRoad.Play, AbbeyRoad.Capture

  build-depends:         base >= 4.7 && < 5
                       , vector
                       , async
                       , safe-exceptions
                       , either
                       , transformers
                       , monad-loops
                       , microlens
                       , OpenAL
                       , ALUT

  default-language:    Haskell2010

  extra-libraries:     OpenAL32, alut
  -- extra-lib-dirs:      dependencies/freealut/admin/VisualStudio6/alut/x64/Release, dependencies/openal-soft-1.16.0-bin/openal-soft-1.16.0-bin/libs/Win64
-- executable Play
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , AbbeyRoad
--   default-language:    Haskell2010

-- test-suite AbbeyRoad-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , AbbeyRoad
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/SwiftsNamesake/AbbeyRoad
